--- a/9_backmatter/references.bib
+++ b/9_backmatter/references.bib
@@ -344,7 +344,7 @@ author = "Leslie Borjas De Xena"
 }
 
 @article{renau2010teaching,
-  title={Teaching And Learning Through Projects Using The Ict: Practice Of The English Writing Through Business Documents},
+  title={Teaching And Learning Through Projects Using The ICT: Practice Of The English Writing Through Business Documents},
   author={Renau, ML Renau and Viciedo, J Us{\'o}},
   journal={ICERI2010 Proceedings},
   pages={4700--4705},
@@ -525,7 +525,7 @@ author = "Leslie Borjas De Xena"
 @article{guenaga2013serious,
   title={Serious Games for the Development of Employment Oriented Competences},
   author={Guenaga, Mariluz and Arranz, Sonia and Rubio Florido, Isabel and Aguilar, Eduardo and Ortiz de Guinea, Alex and Rayon, Alex and Bezanilla, Mara Jose and Menchaca, Iratxe},
-  journal={Tecnologias del Aprendizaje, IEEE Revista Iberoamericana de},
+  journal={IEEE Revista Iberoamericana de Tecnologias del Aprendizaje},
   volume={8},
   number={4},
   pages={176--183},
@@ -732,6 +732,29 @@ author = "Leslie Borjas De Xena"
   pages={321--329},
   year={2014},
   organization={IEEE}
+}
+
+% OTHERS
+
+@article{strijbos2015criteria,
+  title={Criteria and standards of generic competences at bachelor degree level: A review study},
+  author={Strijbos, Jetske and Engels, Nadine and Struyven, Katrien},
+  journal={Educational Research Review},
+  volume={14},
+  pages={18--32},
+  year={2015},
+  publisher={Elsevier}
+}
+
+@article{oliver2013graduate,
+  title={Graduate attributes as a focus for institution-wide curriculum renewal: innovations and challenges},
+  author={Oliver, Beverley},
+  journal={Higher Education Research \& Development},
+  volume={32},
+  number={3},
+  pages={450--463},
+  year={2013},
+  publisher={Taylor \& Francis}
 }
 
 @comment{jabref-meta: selector_publisher:}
