--- a/9_backmatter/references.bib
+++ b/9_backmatter/references.bib
@@ -757,6 +757,13 @@ author = "Leslie Borjas De Xena"
   publisher={Taylor \& Francis}
 }
 
+@article{garcia2005competencias,
+  title={Competencias y dise{\~n}o de la evaluaci{\'o}n continua y final en el Espacio Europeo de Educaci{\'o}n Superior},
+  author={Garc{\'\i}a, Ana Mar{\'\i}a Delgado and Bravo, Rosa Borge and Albero, Jordi Garc{\'\i}a and Cuello, Rafael Oliver and Sancho, Lourdes Salom{\'o}n},
+  journal={Programa de estudios y an{\'a}lisis},
+  year={2005}
+}
+
 @comment{jabref-meta: selector_publisher:}
 
 @comment{jabref-meta: selector_author:}
