--- a/2_state_of_the_art/0_index.tex
+++ b/2_state_of_the_art/0_index.tex
@@ -341,11 +341,13 @@ Un e-portfolio (del inglés \emph{electronic portfolio}, consiste en un conjunto
 
 En muchos trabajos la autoevaluación completa algún otro tipo de evaluación. En \cite{sevilla2012assessment} se utiliza plataforma online inGenio Tester para evaluar el nivel de adquisición de competencias en las modalidades de autoevaluación y evaluación por parte del profesor. En \cite{ficapal2015learning} se presenta un modelo que persigue el aprendizaje basado en equipos para la adquisición y evaluación de competencias genéricas en un contexto de e-learning. Los estudiantes trabajaban en grupo y evaluaban su desempeño en el \emph{trabajo en equipo} mediante una rúbrica. La calificación se completó con un cuestionario. En \cite{khamis2012measurement} también se trabajó y evaluó la competencia de \emph{trabajo en equipo}. Para ello los estudiates trabajaron en equipo y la evaluación tenía dos partes: por un lado los compañeros eran evaluados por otros compañeros (evaluación entre iguales) y por otro lado, también el profesor formaba parte de esta evaluación. En \cite{barbera2011assessment} se desarrollan y evalúan el desarrollo y desempeño de tres competencias genéricas en sus estudiantes: \emph{comunicación verbal}, \emph{comunicación escrita} y \emph{trabajo en equipo}. Este estudio propone una metodología basada en el modelo de tres niveles de evaluación de competencias utilizado por la Universidad de Deusto mediante diferentes herramientas utilizando tres tipos de evaluaciones: autoevaluación, evaluación entre iguales y evaluación del profesor.
 
-Las herramientas 2.0 como wikis o blogs también se utilizan para medir el desempeño en competencias genéricas. En \cite{piedra2010measuring} se utilizan una serie de rúbricas para la autoevaluación de los estudiantes a partir de una serie de indicadores del desempeño de las competencias genéricas de la \emph{creatividad} y del \emph{trabajo colaborativo} a partir de su trabajo en herramientas de trabajo colaborativo. En \cite{mcloughlin2006beyond} se presentan una revisión de herramientas online para trabajar y evaluar competencas genéricas. Entre ellas también se mencionan herramientas colaborativas para la competencia del \emph{trabajo en equipo}.
+En \cite{ruizacarate2013soft} los estudiantes responden a un cuestionario llamado \emph{Evalsoft} dónde son evaluados de las siguientes habilidades sociales: \emph{compromiso}, \emph{comunicación} y \emph{trabajo en equipo}. Para saber si el contexto es importante (online o presencial), se realiza en dos universidades: la Universidad a Distancia de Madrid (UDIMA), que ofrece un entorno de aprendizaje-enseñanza online y la Universidad Politécnica de Madrid (UPM), que además ofrece clases presenciales. Los resultados muestran que en un contexto online los estudiantes muestran un grado más alto de \emph{compromiso} y de \emph{trabajo en equipo}. Las herramientas 2.0 como wikis o blogs también se utilizan para medir el desempeño en competencias genéricas. En \cite{piedra2010measuring} se utilizan una serie de rúbricas para la autoevaluación de los estudiantes a partir de una serie de indicadores del desempeño de las competencias genéricas de la \emph{creatividad} y del \emph{trabajo colaborativo} a partir de su trabajo en herramientas de trabajo colaborativo. En \cite{mcloughlin2006beyond} se presentan una revisión de herramientas online para trabajar y evaluar competencas genéricas. Entre ellas también se mencionan herramientas colaborativas para la competencia del \emph{trabajo en equipo}. 
 
 Para la evaluación de la competencia de la capacidad \emph{autocrítica} se realizó una experiencia en \cite{pinto2011assessment}, dónde un conjunto de profesores de diferentes titulaciones establecieron actividades para los estudiantes. Estos estudiantes evaluaron su propio trabajo. Para medir el grado de competencia de los estudiantes se utilizó la diferencia de la nota entre la que recibieron los estudiantes por parte del profesor y la que ellos mismos se pusieron. En \cite{sin2007evaluating} también se realizó una experiencia donde tanto los propios estudiantes como los profesores evaluaban el desempeño de las competencias de la comunicación en contabilidad, tanto las \emph{habilidades para expresarse de manera escrita} como del \emph{pensamiento analítico}.
 
-Aunque la autoevaluación y evaluación entre iguales son enfoques que quitan trabajo al docente, no todos son ventajas. Como se ha visto en algunos trabajos anteriores, este enfoque a menudo sólo se utiliza de manera complementaria a algún otro tipo de evaluación. Además, se puede dar el caso que la autoevaluación no se ajuste del todo a la realidad del desempeño del estudiante. Por ejemplo, en \cite{carreras2013promotion} hay notables diferencias entre las calificaciones que se auto-asignan los estudiantes en algunas competencias y las calificaciones que le asignaron los profesores en esas mismas competencias. En ese trabajo se promovió la adquisición de competencias genéricas desde un punto de vista interdisciplinar y se diseñaron herramientas especifícas para evaluar dichas habilidades. A la hora de evaluar, se realizaron tanto autoevaluaciones como evaluaciones del profesor. En esta experiencia se evaluaron cuatro competencias genéricas: \emph{capacidad de análisis},  \emph{habilidades de escritura}, \emph{responsabilidad} y \emph{capacidad de trabajo en equipo}. Cabe destacar discrepancias entre las calificaciones que se auto-asignan los estudiantes en las dos primeras competencias. En la \emph{capacidad de análisis} la discrepancia es de un 55,65\%, mientras que en las \emph{habilidades de escritura} de un 13,75\%.
+Para conocer el nivel de adquisición de competencias genéricas que poseen los estudiantes que acceden a la universidad y enfocándose en las diferencias entre los estudiantes de ciencias y los que no son de ciencias, se propone en \cite{so2011mapping} un cuestionario de autoevaluación. Aunque la autoevaluación y evaluación entre iguales son enfoques que quitan trabajo al docente, no todos son ventajas. Como se ha visto en algunos trabajos anteriores, este enfoque a menudo sólo se utiliza de manera complementaria a algún otro tipo de evaluación. Además, se puede dar el caso que la autoevaluación no se ajuste del todo a la realidad del desempeño del estudiante. Por ejemplo, en \cite{carreras2013promotion} hay notables diferencias entre las calificaciones que se auto-asignan los estudiantes en algunas competencias y las calificaciones que le asignaron los profesores en esas mismas competencias. En ese trabajo se promovió la adquisición de competencias genéricas desde un punto de vista interdisciplinar y se diseñaron herramientas especifícas para evaluar dichas habilidades. A la hora de evaluar, se realizaron tanto autoevaluaciones como evaluaciones del profesor. En esta experiencia se evaluaron cuatro competencias genéricas: \emph{capacidad de análisis},  \emph{habilidades de escritura}, \emph{responsabilidad} y \emph{capacidad de trabajo en equipo}. Cabe destacar discrepancias entre las calificaciones que se auto-asignan los estudiantes en las dos primeras competencias. En la \emph{capacidad de análisis} la discrepancia es de un 55,65\%, mientras que en las \emph{habilidades de escritura} de un 13,75\%.
+
+
 
 \subsubsection{Teacher assessment}
 
@@ -361,7 +363,15 @@ Uno de los problemas de la no automatización de los procesos de evaluación es 
 
 En \cite{lumsden2005assessment} se muestra la herramienta PQA (Personal Quality Assessment). Esta herramienta de evaluación contiene diversos test para la evaluación de la competencia genérica del \emph{razonamiento} y del {comportamiento ético} en el ámbito médico.
 
-Trabajos: \cite{vizcarro2013assessment}, \cite{ruizacarate2013soft}, \cite{barbera2011design}, \cite{so2011mapping}, \cite{badcock2010developing}, \cite{aziz2007appraisal}, \cite{rashid2008engineering}, \cite{a2007outcome}, \cite{albergaria2011critical}, \cite{park2006moral}, \cite{andre2011formal}, \cite{martinez2014teamwork}, \cite{fernandez2011experience}.
+En \cite{vizcarro2013assessment}, profesores de los grados de Computación y Matemáticas y de Ingeniería Informática elaboraron una prueba escrita para la evaluación de la competencia genérica de \emph{resolución de problemas}. Este constaba de preguntas abiertas y cerradas, siendo minuciosamente por el profesorado que formaba parte en la experiencia, así como las respuestas que se esperarían de los estudiantes. El proyecto fue muy satisfactorio, aunque en las conclusiones vemos que los autores indican que encontrar un equilibrio entre el esfuerzo necesario para desarrollar este tipo de dispositivos de evaluación y la posibilidad de no hacerlo, o hacerlo pero no tan exhaustivamente, es algo que la comunidad académica debe abordar seriamente.
+
+En \cite{barbera2011design} se lleva a cabo una experiencia en la que se aplicó una metodología ABP en la asignatura de Gestión de Empresas. Trabajaron las competencias de \emph{trabajo en equipo}, \emph{desarrollo de proyecto} y \emph{comunicación oral}. Para asegurar la objetividad de la evaluación se utilizaron rúbricas y cuestionarios. El profesorado que participó en la experiencia la consideró como muy positiva, pero reconocieron que tuvieron que dedicar un elevado número de horas, tanto para las clases como para la evaluación de muchos proyectos.
+
+En \cite{badcock2010developing} se evaluan cuatro competencias genéricas: \emph{pensamiento crítico}, \emph{habilidades interpersonales}, \emph{solución de problemas} y \emph{comunicación escrita}. Para ello se utiliza el test GSA (Graduate Skills Assessment). El GSA fue desarrollado por el ACER (Australian Council for Educational Research)~\footnote{http://www.acer.edu.au/gsa}  bajo su Programa de Innovación para la Educación Superior. El objetivo con el que se diseñó es el de evaluar estas competencias genéricas cuando los estudiantes acceden a la universidad. Esto ayuda al profesorado a tener una medida objetiva para dichas competencias.
+
+En \cite{aziz2007appraisal,rashid2008engineering,a2007outcome} se utilizan modelos matemáticos (\emph{Rasch model} y \emph{ESPEGS model})para la evaluación de los objetivos de aprendizaje del curso y de competencias genéricas. La entrada de estos modelos matemáticos son la evaluación de los estudiantes realizadas por los docentes para cada actividad.
+
+Trabajos: \cite{albergaria2011critical}, \cite{park2006moral}, \cite{andre2011formal}, \cite{martinez2014teamwork}, \cite{fernandez2011experience}.
 
 \subsubsection{Learning Analytics}
 
