--- a/9_backmatter/references.bib
+++ b/9_backmatter/references.bib
@@ -764,6 +764,13 @@ author = "Leslie Borjas De Xena"
   year={2005}
 }
 
+@book{wiggins2003paradigms,
+  title={Paradigms of personality assessment},
+  author={Wiggins, Jerry S},
+  year={2003},
+  publisher={Guilford Press}
+}
+
 @comment{jabref-meta: selector_publisher:}
 
 @comment{jabref-meta: selector_author:}
